# santa2025

./: README.md  example.ipynb  pyproject.toml
cpp/: CMakeLists.txt
cpp/apps/: optimizer_dashboard.cpp
cpp/data/: intersection_tree_filter.txt  intersection_tree_filter_compact.txt  intersection_tree_filter_depth7.txt  intersection_tree_filter_pruned.txt
cpp/examples/: basic.cpp  benchmark.cpp  benchmark_grids.cpp  profile_basic.cpp  profile_solver.cpp  profile_solver_detailed.cpp  recompute_intersection_tree_leaf_pred.cpp  solver_example.cpp  test_triangle_grid.cpp
cpp/experiments/: intersection_filtering.cpp
cpp/include/tree_packing/: tree_packing.hpp
cpp/include/tree_packing/constraints/: bounds.hpp  intersection.hpp  intersection_tree_filter.hpp
cpp/include/tree_packing/core/: global_state.hpp  problem.hpp  solution.hpp  tree.hpp  types.hpp  update_stack.hpp
cpp/include/tree_packing/geometry/: intersection_score.hpp  sat.hpp  utilities.hpp
cpp/include/tree_packing/optimizers/: alns.hpp  combine.hpp  noise.hpp  optimizer.hpp  recreate.hpp  ruin.hpp  sa.hpp  tighten.hpp
cpp/include/tree_packing/random/: rng.hpp
cpp/include/tree_packing/solvers/: beam_descent.hpp  fitness_utils.hpp  nelder_mead.hpp  noise_solver.hpp  pso.hpp  random_sampling.hpp  solver.hpp  solvers.hpp
cpp/include/tree_packing/spatial/: figure_hash2d.hpp  grid2d.hpp  triangle_grid2d.hpp  triangle_hash2d.hpp
cpp/python/: bindings.cpp
cpp/python/tree_packing_cpp/: __init__.py  __init__.pyi  tree_packing_cpp.pyi
cpp/scripts/: analyze_deep_branches.py  analyze_tree_pruning.py  compact_tree.py  prune_tree_filter.py  restructure_tree.py  validate_pruned_model.py
cpp/src/constraints/: bounds.cpp  intersection.cpp  intersection_tree_filter.cpp
cpp/src/core/: global_state.cpp  problem.cpp  solution.cpp  tree.cpp  types.cpp  update_stack.cpp
cpp/src/geometry/: intersection.cpp  intersection_score.cpp  sat.cpp  utilities.cpp
cpp/src/optimizers/: alns.cpp  combine.cpp  noise.cpp  optimizer.cpp  recreate.cpp  ruin.cpp  sa.cpp  tighten.cpp
cpp/src/random/: rng.cpp
cpp/src/spatial/: figure_hash2d.cpp  grid2d.cpp  triangle_grid2d.cpp  triangle_hash2d.cpp
cpp/tests/: test_filter_analyze.cpp  test_filter_exhaustive.cpp  test_grid2d.cpp  test_incremental.cpp  test_intersection_tree_filter.cpp  test_noise_debug.cpp  test_optimizers.cpp  test_rollback_debug.cpp  test_sa_debug.cpp  test_sat.cpp  test_solution.cpp  test_tree.cpp  test_types.cpp
experiments/: recreate.ipynb  traingle_intersection.ipynb  tree.ipynb  tree_insertion.ipynb  trees_intersection.ipynb
santa/: core.py
santa/optimizers/: __init__.py  alns.py  combine.py  gd.py  noise.py  recreate.py  rnr.py  ruin.py  sa.py
santa/tree_packing/: __init__.py  area.py  constraints.py  grid.py  intersection.py  plot.py  problem.py  scoring.py  solution.py  tree.py
